# 8QM_RTSP

./: CMakeLists.txt  README.md  libgstrtspserver-1.0.so.0
src/: h265_rtsp.cpp
